# rag-it

./: .gitignore  README.md  pyproject.toml
rag_it/: ingest.py  ingest_pdf.py  rag.py  simple.py
