[project]
name = "rag-it"
version = "0.1.0"
description = ""
authors = [{ name = "Jordan Garcia", email = "arickho@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["langchain (>=0.3.15,<0.4.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
